--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,18 @@
 {
-  "presets": ["react-native"]
+  "presets": ["react-native"],
+  "plugins": [
+    ["module-resolver", {
+      "root": ["./src"],
+      "alias": {
+        "components": "./components",
+        "config": "./config",        
+        "data": "./data",        
+        "hocs": "./hocs",
+        "img": "./img",
+        "screens": "./screens"        
+      },
+      "cwd": "babelrc",      
+      "extensions": [".js"]
+    }]
+  ]
 }
