--- a/package.json
+++ b/package.json
@@ -1,21 +1,40 @@
 {
-	"name": "reactNativeApolloStarterKit",
+	"name": "react-native-apollo-starter-kit",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"dev": "react-native run-ios",		
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.0.0-beta.5",
-		"react-native": "0.49.5"
-	},
-	"devDependencies": {
-		"babel-jest": "21.2.0",
-		"babel-preset-react-native": "4.0.0",
-		"jest": "21.2.1",
-		"react-test-renderer": "16.0.0-beta.5"
-	},
+    "apollo-cache-inmemory": "^0.2.0-rc.4",
+    "apollo-client": "^2.0.0-rc.7",
+    "apollo-link-error": "^1.0.0",
+    "apollo-link-http": "^1.0.0",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
+    "react": "16.0.0-beta.5",
+    "react-apollo": "^2.0.0",
+    "react-native": "0.49.3",
+    "react-native-platform-touchable": "^1.1.1",
+    "react-navigation": "^1.0.0-beta.15",
+    "recompose": "^0.26.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.0.1",
+    "babel-jest": "21.2.0",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-preset-react-native": "4.0.0",
+    "eslint": "^4.9.0",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-react-native": "^3.1.0",
+    "jest": "21.2.1",
+    "prettier": "^1.7.4",
+    "react-test-renderer": "16.0.0-beta.5"
+  },
 	"jest": {
 		"preset": "react-native"
 	}
