--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-	"name": "react-native-apollo-starter-kit",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"dev": "react-native run-ios",		
-		"test": "jest"
-	},
-	"dependencies": {
+  "name": "react-native-apollo-starter-kit",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "dev": "react-native run-ios",
+    "test": "jest"
+  },
+  "dependencies": {
     "apollo-cache-inmemory": "^0.2.0-rc.4",
     "apollo-client": "^2.0.0-rc.7",
     "apollo-link-error": "^1.0.0",
     "apollo-link-http": "^1.0.0",
+    "firebase": "^4.6.0",
     "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
     "react": "16.0.0-beta.5",
     "react-apollo": "^2.0.0",
     "react-native": "0.49.3",
+    "react-native-elements": "^0.17.0",
     "react-native-platform-touchable": "^1.1.1",
+    "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.15",
     "recompose": "^0.26.0"
   },
@@ -35,7 +38,7 @@
     "prettier": "^1.7.4",
     "react-test-renderer": "16.0.0-beta.5"
   },
-	"jest": {
-		"preset": "react-native"
-	}
+  "jest": {
+    "preset": "react-native"
+  }
 }
